--- a/index.html
+++ b/index.html
@@ -328,35 +328,59 @@
   }
 
   // Upload handler
-  async function handleUpload() {
-    const input = document.getElementById("photoInput");
-    const files = input.files;
-    if (!files.length) return;
+  function handleUpload() {
+  const input = document.getElementById("photoInput");
+  const files = input.files;
+  if (!files.length) return;
 
-    const storedPhotos = JSON.parse(localStorage.getItem("photos")) || [];
+  const storedPhotos = JSON.parse(localStorage.getItem("photos")) || [];
 
-    for (let file of files) {
-      const dataUrl = await readFileAsDataURL(file);
-
-      const photo = {
-        src: dataUrl,
-        caption: prompt("Caption for this photo (optional):") || "",
-        location: prompt("Location where this was taken (optional):") || "",
-        timestamp: Date.now()
-      };
-
-      try {
-        const id = await addPhotoToDB(photo);
-        photo.id = id;
-        storedPhotos.push(photo);
-      } catch (err) {
-        console.error("Error adding photo:", err);
-      }
+  Array.from(files).forEach(file => {
+    if (!file.type.match("image/jpeg")) {
+      alert("Only JPEG images are supported.");
+      return;
     }
 
-    localStorage.setItem("photos", JSON.stringify(storedPhotos));
-    renderPhotoPosts();
-  }
+    const reader = new FileReader();
+    reader.onload = function (event) {
+      const img = new Image();
+      img.onload = async function () {
+        // === Compress image ===
+        const canvas = document.createElement("canvas");
+        const maxWidth = 800;
+        const scaleSize = maxWidth / img.width;
+        canvas.width = maxWidth;
+        canvas.height = img.height * scaleSize;
+
+        const ctx = canvas.getContext("2d");
+        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+        const compressedDataUrl = canvas.toDataURL("image/jpeg", 0.7); // 0.7 = 70% quality
+
+        // === Metadata prompts ===
+        const caption = prompt("Enter a caption for your photo:", "");
+        const location = prompt("Enter the location of this memory:", "");
+        const timestamp = new Date().toLocaleString();
+
+        const photo = {
+          id: Date.now() + Math.random(),
+          dataUrl: compressedDataUrl,
+          caption,
+          location,
+          timestamp
+        };
+
+        storedPhotos.push(photo);
+        localStorage.setItem("photos", JSON.stringify(storedPhotos));
+        await savePhotoToDB(photo); // Ensure this is async-compatible
+        renderPhotoPosts();
+      };
+      img.src = event.target.result;
+    };
+    reader.readAsDataURL(file);
+  });
+
+  input.value = ""; // Reset the input
+}
 
   // Sync IndexedDB photos to localStorage
   async function cachePhotosLocally() {
