--- a/index.html
+++ b/index.html
@@ -336,35 +336,18 @@
   const storedPhotos = JSON.parse(localStorage.getItem("photos")) || [];
 
   Array.from(files).forEach(file => {
-    if (!file.type.startsWith("image/")) return;
+    if (!file.type.startsWith("image/jpeg")) return;
 
     const reader = new FileReader();
     reader.onload = function (event) {
-      const img = new Image();
-      img.onload = function () {
-        const canvas = document.createElement("canvas");
-        const MAX_WIDTH = 1024;
-        const scaleSize = MAX_WIDTH / img.width;
-        canvas.width = MAX_WIDTH;
-        canvas.height = img.height * scaleSize;
-
-        const ctx = canvas.getContext("2d");
-        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-
-        // Compress to JPEG with 0.7 quality
-        const compressedDataUrl = canvas.toDataURL("image/jpeg", 0.7);
-
-        storedPhotos.push({ src: compressedDataUrl, uploadedAt: Date.now() });
-        localStorage.setItem("photos", JSON.stringify(storedPhotos));
-        renderPhotoPosts(); // Refresh UI
-      };
-      img.src = event.target.result;
+      storedPhotos.push(event.target.result);
+      localStorage.setItem("photos", JSON.stringify(storedPhotos));
+      renderPhotoPosts();
     };
     reader.readAsDataURL(file);
   });
 
-  // Clear input so same file can be uploaded again
-  input.value = "";
+  input.value = ''; // Clear input
 }
 
   // Sync IndexedDB photos to localStorage
