--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 </head>
 <body>
 
-<header>Catch Cards App</header>
+<header>Fishin' Buddy</header>
 
 <div id="tabs">
   <button id="memoriesTabBtn" class="active">Memories</button>
@@ -348,7 +348,7 @@
       const caption = prompt("Enter a caption for this photo:", "") || "";
       const location = prompt("Enter a location for this photo:", "") || "";
 
-      const timestamp = new Date().toLocaleString();
+      const timestamp = new Date().toISOString();
 
       storedPhotos.push({
         src: event.target.result,
