--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   <div id="photoGallery" aria-live="polite" aria-label="Memories photo feed"></div>
 </section>
 
-<section id="talliesTab" style="display:none;">
+<section id="talliesTab" hidden>
   <h3>Fish List </h3>
   <h3>Total Fish Caught: <span id="totalFishCount">0</span></h3>
   <div id="fishList" class="fish-list"></div>
@@ -663,19 +663,19 @@ const talliesTabBtn = document.getElementById("talliesTabBtn");
 const memoriesTab = document.getElementById("memoriesTab");
 const talliesTab = document.getElementById("talliesTab");
 
-// Tab switching
+// Tab switching (using hidden attribute for better reliability)
 memoriesTabBtn.addEventListener("click", () => {
   memoriesTabBtn.classList.add("active");
   talliesTabBtn.classList.remove("active");
-  memoriesTab.style.display = "";         // Show memories tab
-  talliesTab.style.display = "none";      // Hide tallies tab
+  memoriesTab.hidden = false;
+  talliesTab.hidden = true;
 });
 
 talliesTabBtn.addEventListener("click", () => {
   talliesTabBtn.classList.add("active");
   memoriesTabBtn.classList.remove("active");
-  talliesTab.style.display = "";          // Show tallies tab
-  memoriesTab.style.display = "none";     // Hide memories tab
+  talliesTab.hidden = false;
+  memoriesTab.hidden = true;
 });
 
   // Init
